2000-05-07  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/e-addressbook-model.c: Replaced some model_changed
	calls with row_inserted calls.

2000-05-07  Christopher James Lahey  <clahey@helixcode.com>

	* backend/pas/pas-backend-file.c, backend/pas/pas-backend-ldap.c:
	Removed some code that was notifying too many clients at the wrong
	times.

	* gui/component/addressbook.c: Set view->book.  Unreffed
	view->book.  Unreffed the model instead of destroying it.  Removed
	the /tmp/test.db stuff.

2000-05-07  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/addressbook.c: Make the addressbook create the
	correct file uri.  Added a default query.  Initialize view->model
	and view->view to NULL.

	* gui/component/e-addressbook-model.c,
	gui/minicard/e-minicard-view.c: Only call get_book_view if both
	book and query and non-null.

2000-05-06  Chris Toshok  <toshok@helixcode.com>

	* gui/component/addressbook.c (control_deactivate): remove the
	separator and toggle view items as well.
	(toggle_view_as_cb): callback for the "/View/Toggle View" menu
	item.
	(get_query): getter for the query string that takes into account
	the two view types.
	(set_query): setter for the query string that takes into account
	the two view types.
	(set_book): setter for the EBook type - not really a setter, since
	the book is kept in the AddressbookView, but this method actually
	sets the "book" property on the current view.
	(find_contact_cb): make use of get/set_query
	(search_entry_activated): make use of set_query.
	(control_activate): add a menu separator and an item to toggle
	between view types.
	(book_open_cb): make use of set_book.
	(ebook_create): no longer needs to return the EBook, since we set
	the book field in our view.
	(teardown_minicard_view): destructor function for the minicard
	specific ui.
	(create_minicard_view): constructor function for the minicard
	specific ui.
	(teardown_table_view): destructor function for the e-table